# backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  example.env  package.json
server/: .gitignore  Cargo.toml  config.json
server/src/: aptos_rpc.rs  event_parser.rs  event_parser.rs.orig  loops.rs  loops.rs.orig  main.rs  main.rs.orig  storage.rs  utils.rs
server/src/event_parser/: seed_hash.rs
server/src/utils/: rpc_endpoints.rs
src/: deploy.rs  index.js  lib.rs  main.rs
src/utils/: api.js  aptos.js  contract.js
test-contract-event/: Move.toml  README.md
test-contract-event/sources/: FirstModule.move
