[package]
name = "aptos-dice-backend"
version = "0.0.1"
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde_json = "1.0.81"
hex = "0.4.3"
rand = "0.7.3"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
tiny-keccak = { version = "2.0.2", default-features = false, features = ["sha3"] }
ed25519-dalek = { version = "0.1.0", package = "ed25519-dalek-fiat", default-features = false, features = ["std", "serde", "fiat_u64_backend"] }


[[bin]]
name = "deploy"
path = "src/deploy.rs"

[[bin]]
name = "backend"
path = "src/main.rs"