[package]
name = "casino-backend-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-client = "6.5.1"
http-types = "2.12.0"
serde_json = "1.0.83"
tokio = {version = "1.20.1", features = ["full"] }