[package]
name = "casino-backend-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-client = "6.5.1"
http-types = "2.12.0"
serde_json = "1.0.83"
rocket = "0.5.0-rc.1"
sha256 = "1.0.3"
rand = "0.8.5"
tokio = {version = "1.20.1", features = ["full"] }

hex = "0.4.3"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
tiny-keccak = { version = "2.0.2", default-features = false, features = ["sha3"] }
ed25519-dalek = { version = "0.1.0", package = "ed25519-dalek-fiat", default-features = false, features = ["std", "serde", "fiat_u64_backend"] }
